examples/negative/name_errors/L1/3_var_same_scope.ob
MODULE VarSameScope;

VAR x, x: INTEGER;

END VarSameScope.
